<resources>
    <string name="app_name">FManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_icon">Navigation drawer icon</string>

    <string name="content_description_image_view">type</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themes_value">
        <item>theme_light</item>
        <item>theme_dark</item>
    </string-array>
    <string name="theme_default">
        theme_light
    </string>

    <string-array name="home_dirs">
        <item>Root directory (/)</item>
        <item>Internal storage</item>
    </string-array>
    <string-array name="home_dirs_value">
        <item>root</item>
        <item>internal</item>
    </string-array>
    <string name="home_dir_default">
        internal
    </string>

    <string name="content_description_action_delete">action_delete</string>
    <string name="content_description_action_rename">action_rename</string>
    <string name="label_current_path">Current path:</string>
    <string name="title_search">Search</string>
    <string name="nav_title_root">Root directory</string>
    <string name="nav_title_int">Internal storage</string>
    <string name="nav_title_ext">External storage</string>
    <string name="nav_title_shortcuts">Shortcuts</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_send">Send</string>

</resources>
