<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_title_shortcuts">
        <menu>
            <item
                    android:id="@+id/nav_root"
                    android:icon="@drawable/ic_folder"
                    android:title="@string/nav_title_root"/>
            <item
                    android:id="@+id/nav_int"
                    android:icon="@drawable/ic_folder"
                    android:title="@string/nav_title_int"/>
            <item
                    android:id="@+id/nav_ext"
                    android:icon="@drawable/ic_folder"
                    android:title="@string/nav_title_ext"/>
        </menu>
    </item>

    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_title_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_title_send"/>
        </menu>
    </item>

</menu>
